# 4bit-QLoRA-post-training

./: .pre-commit-config.yaml  QUICKSTART.md  README.md  TRAINING_LOG.md  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt
config/: __init__.py  base.py  dpo.py  models.yaml  sft.py  windows.yaml
data/custom/: README.md
data/custom/examples/: sample_finance.jsonl
docs/theory/: dpo.md  qlora.md  sft.md
docs/tutorials/: finance_training.md  getting_started.md  windows_training_setup.md
notebooks/: 00_setup.ipynb
outputs/test-quick/checkpoint-3/: trainer_state.json
outputs/test-quick/runs/Jan30_16-38-22_ben-workstation/: events.out.tfevents.1769762302.ben-workstation.8606.0  events.out.tfevents.1769762319.ben-workstation.8606.1
scripts/: download_data.py  evaluate.py  merge_lora.py  train_dpo.py  train_finance_full.py  train_quick_test.py  train_remote.py  train_sft.py
src/data/: __init__.py  base.py  loaders.py  preprocessors.py
src/evaluation/: __init__.py  comparisons.py  metrics.py  qualitative.py
src/models/: __init__.py  base.py  loader.py  merger.py
src/training/: __init__.py  callbacks.py  domain_trainer.py  dpo_trainer.py  sft_trainer.py
src/utils/: __init__.py  execution.py  logging.py  memory.py  platform_utils.py  seed.py
tests/unit/: test_config.py  test_utils.py
